fix: correct Japanese translation for activated bookmark status
Changes "活性済み" (a literal/incorrect translation of "activated")
to "アクティベート済み" (the standard loanword used in the SOTA
amateur radio community).

--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -355,7 +355,7 @@
   "bookmarks": {
     "title": "ブックマーク",
     "wantToGo": "行きたい",
-    "activated": "活性済み",
+    "activated": "アクティベート済み",
     "empty": "ブックマークはありません",
     "emptyDesc": "サミットのブックマークアイコンをタップしてここに保存できます。",
     "savedAt": "保存日",
