--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -181,7 +181,8 @@
     "browseAllSummits": "全山頂を見る",
     "browseAllDesc": "完全なデータベースをフィルタ・検索",
     "findNearby": "近くの山頂を探す",
-    "findNearbyDesc": "GPSであなたの周りの山頂を発見"
+    "findNearbyDesc": "GPSであなたの周りの山頂を発見",
+    "bookmarksDesc": "保存したサミットを確認・管理する"
   },
   "hero": {
     "gpsLocationFinder": "GPS位置情報検索",
